mobile backlink icon fix on small screen sizes

--- a/frontend/src/styles/backLink.module.css
+++ b/frontend/src/styles/backLink.module.css
@@ -36,3 +36,9 @@
         width: 20vw;
     }
 }
+
+@media (max-width: 350px) {
+    .backLink a {
+        width: 50vw;
+    }
+}
